# llm-feature-gen

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  test.ipynb  test_package.ipynb  test_package.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: index.md  outputs-schema.md
outputs/: Advisory_texts_feature_values.csv  Formal_texts_feature_values.csv  discovered_image_features.json  discovered_text_features.json  vase_feature_values.csv
src/LLM_feature_gen/: discover.py  generate.py
src/LLM_feature_gen/providers/: local_provider.py  openai_provider.py
src/LLM_feature_gen/utils/: image.py  video.py
src/llm_feature_gen/: discover.py
src/llm_feature_gen/utils/: text.py
src/tests/: conftest.py  test_discover_more.py  test_discovery.py  test_generation.py  test_integration_smoke.py  test_providers.py  test_utils_and_prompts.py
